# InfraDrone

./: .gitignore
app/web/: index.html  package-lock.json  package.json  tailwind.config.js
app/web/.playwright-mcp/: page-2026-04-22T23-51-37-678Z.yml  page-2026-04-23T00-04-06-356Z.yml  page-2026-04-23T00-10-57-488Z.yml  page-2026-04-23T00-17-13-964Z.yml
app/web/src/: App.tsx  main.tsx  styles.css
app/web/src/components/dashboard/: DamageSummary.tsx  DetectionsPanel.tsx  InspectionMap.tsx  MissionProgress.tsx  RecentPanel.tsx  Sidebar.tsx  Topbar.tsx  VideoPanel.tsx
app/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
app/web/src/data/: dashboard.ts
python/: main.py  pyproject.toml
python/runs/pothole_yolo26/: args.yaml
python/src/model/: damage_detection_model.py
python/src/models/: damage_detection_model.py
python/src/models/scripts/: convert_large_dataset.py  test_transforms.py  train_model.ipynb  train_model.py
python/src/models/trained_models/: args.yaml
runs/detect/runs/pothole_yolo26/: args.yaml
runs/detect/runs/pothole_yolo26-2/: args.yaml
runs/detect/runs/pothole_yolo26-3/: args.yaml
